Fix: attempt to fix bug where feature tiles are getting cut off

--- a/sass/layout/_featured.scss
+++ b/sass/layout/_featured.scss
@@ -23,6 +23,7 @@
 
   &__figure {
     flex-basis: 30%;
+    height: fit-content;
     margin-bottom: 4rem;
     background-color: var(--color-secondary);
     border-radius: 3px;
